# ContractsTests

ADVICE/: package-lock.json  package.json  test.ts
AssemblyScript/Init/: package.json  pnpm-lock.yaml
AssemblyScript/Init/test1-initial/: test1.ts  test1.wasm  (+1 more)
AsyncVMTests/test-1-simple-object/: .gitignore
AsyncVMTests/test-2-async-func/: Cargo.toml
AsyncVMTests/test-4-no-async-imports/: Cargo.toml
AsyncVMTests/test-5-async-without-await/: Cargo.toml
AsyncVMTests/test-6-just-js-value/: .gitignore  Cargo.toml  LICENSE_MIT
AsyncVMTests/test-7-simple-async/: .gitignore  Cargo.toml
Reverse/: README.md  reader.js
Reverse/builds/: test_1_simple_object_bg.wasm  test_1_simple_object_bg.wat  test_6_simple_object_bg.wasm  test_6_simple_object_bg.wat  test_7_simple_object_bg.wasm  test_7_simple_object_bg.wat
Rust/HelloJSObject/: Cargo.toml
Rust/HelloJSObject/src/: lib.rs
Rust/PureStringViaBindgen/: Cargo.toml
Rust/ReturnString/: Cargo.toml
Rust/Rot13/: Cargo.toml
Rust/SerdeWasm/: Cargo.toml
Rust/SerdeWasm/src/: lib.rs  use.js
Rust/TestSerde/: Cargo.toml
Rust/TestWithContext/: Cargo.toml
Rust/WasmJSRustSerdeKLYNTAR/: Cargo.toml
Rust/WasmJSRustSerdeKLYNTAR/pkg/: WasmJSRustSerdeKLYNTAR.js  WasmJSRustSerdeKLYNTAR_bg.wasm
Rust/WasmJSRustSerdeKLYNTAR/src/: lib.rs
THE_LATEST/: package-lock.json  package.json  test.ts
THE_LATEST/MY_TEST/: package.json  pnpm-lock.yaml
Usage/: package.json  pnpm-lock.yaml
Usage/AsyncFunctions/: use.js
Usage/Metering/: package.json  use.js
Usage/PureStringViaBindgen/: package.json  use.js
Usage/SerdeWasm/: package.json  use.js
Usage/TestWithContext/: package.json  use.js
Usage/UseBase64Rot13RustWasmKlyntar/: package.json  pnpm-lock.yaml  use.js
Usage/WasmJSRustSerdeKLYNTAR/: package.json  use.js
VAILD_WITH_NPM/: package-lock.json  package.json  test.ts
tests/: package.json  use_1.js  use_2.js  use_5.js  use_cusom.js
(+35 files in other folders)
