[package]
name = "HelloJSObject"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.80"
js-sys = "0.3.57"



[lib]
crate-type=["cdylib"]

############################ DEPENDENCIES ###########################

# Let's try without dependencies

############################## OPTIMIZATION STUFF ##############################

# +Use RUSTFLAGS="-C target-cpu=native"


[profile.release]
lto=true
codegen-units=1
incremental=true
strip=true

############# <<<<< FOR DEPENDENCIES >>>>> #############

[profile.release.package."*"]

codegen-units=1
incremental=true
strip=true